# alefsdb

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/alefs-bench/: Cargo.toml
crates/alefs-bench/src/: main.rs
crates/alefs-fuse/: Cargo.toml
crates/alefs-fuse/src/: lib.rs
crates/alefs-namespace/: Cargo.toml
crates/alefs-namespace/src/: db.rs  error.rs  keys.rs  lib.rs  txn.rs
crates/alefs-query/: Cargo.toml
crates/alefs-query/src/: ast.rs  eval.rs  golden.rs  lib.rs  parse.rs
crates/alefs-server/: Cargo.toml
crates/alefs-server/src/: client.rs  handle.rs  lib.rs  lock.rs  protocol.rs
crates/alefs-storage/: Cargo.toml
crates/alefs-storage/src/: batch.rs  error.rs  lib.rs  memory.rs  soak.rs  wal.rs
crates/alefs-types/: Cargo.toml
crates/alefs-types/src/: codec.rs  lib.rs  path.rs  value.rs
crates/alefsdb/: Cargo.toml
crates/alefsdb/src/: main.rs
docs/: fuse-edit-paths.md
docs/superpowers/plans/: 2026-07-09-alefsdb-p0-skeleton.md  2026-07-09-alefsdb-p6-p7.md
docs/superpowers/specs/: 2026-07-09-alefsdb-design.md
scripts/: load_compact.sh
